--- a/index.html
+++ b/index.html
@@ -142,42 +142,42 @@
                     <div class="container">
                         <h2 class="portfolio">Our Portfolio</h2>
                         <ul class="about-service">
-                            <li>
+                            <li class="about-service-item">
                                 <img class="container-imagine"  src="./images/banking.jpg" width="360" height="300" alt="Banking App">
                                     <div class="container-service">
                                         <h3 class="our-portfolio">Banking App</h3>
                                             <p class="about-portfolio">App</p>
                                     </div>
                             </li>
-                            <li>
+                            <li class="about-service-item">
                                 <img class="container-imagine" src="./images/payment.jpg" width="360" height="300" alt="Cashless Payment">
                                     <div class="container-service">
                                         <h3 class="our-portfolio">Cashless Payment</h3>
                                             <p class="about-portfolio">Marketing</p>
                                     </div>
                             </li>
-                            <li>
+                            <li class="about-service-item">
                                 <img class="container-imagine" src="./images/app.jpg" width="360" height="300" alt="Meditation App">
                                     <div class="container-service">
                                         <h3 class="our-portfolio">Meditation App</h3>
                                             <p class="about-portfolio">App</p>
                                     </div>
                             </li>
-                            <li>
+                            <li class="about-service-item">
                                 <img class="container-imagine" src="./images/taxi.jpg" width="360" height="300" alt="Taxi Service">
                                     <div class="container-service">
                                         <h3 class="our-portfolio">Taxi Service</h3>
                                             <p class="about-portfolio">Marketing</p>
                                     </div>
                             </li>
-                            <li>
+                            <li class="about-service-item">
                                 <img class="container-imagine" src="./images/screen.jpg" width="360" height="300" alt="Screen Illustrations">
                                     <div class="container-service">
                                         <h3 class="our-portfolio">Screen Illustrations</h3>
                                             <p class="about-portfolio">Design</p>
                                     </div>
                             </li>
-                            <li>
+                            <li class="about-service-item">
                                 <img class="container-imagine" src="./images/courses.jpg" width="360" height="300" alt="Online Courses">
                                     <div class="container-service">
                                         <h3 class="our-portfolio">Online Courses</h3>
@@ -190,7 +190,7 @@
             </main>
     <footer class="page-footer">
         <div class="container">
-            <a class="footer-logo" href="./index.html">Web<span class="footer_logo">Studio</span></a>
+            <a class="footer-logo" href="./index.html">Web<span class="footer-logo-accent">Studio</span></a>
             <p class="intro-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
     </footer>
